methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:18: error: identifier expected but ')' found.
def line2(c1:Color, c2:Color,){
                             ^FlowerCase:56: error: ':' expected but '}' found.
}
^